Add option to disable functions
